--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   firebase_core: ^2.15.1
   firebase_auth: ^4.7.3
   cloud_firestore: ^4.9.0
+  google_sign_in: ^6.1.5
 
 dev_dependencies: 
   flutter_lints: 2.0.2
